Distinction entre Texte et TexteE3C Conversion des balises HTML embarquées dans les Questions ou les Réponses

--- a/MoodleQuiz/E3CtoMoodle/Properties/launchSettings.json
+++ b/MoodleQuiz/E3CtoMoodle/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "E3CtoMoodle": {
       "commandName": "Project",
-      "commandLineArgs": "-p E3CFile.docx"
+      "commandLineArgs": "-c test.e3c"
     }
   }
 }
