--- a/MoodleQuiz/E3CLibrary/E3CLibrary.csproj
+++ b/MoodleQuiz/E3CLibrary/E3CLibrary.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoodleQuiz\MoodleQuiz.csproj" />
+  </ItemGroup>
+
 </Project>
